test_case/rust-lang_rust/16076_50527179_1.rs
 rust
    //~^ ERROR use of deprecated item: This is being removed. Use rust-url instead. http://servo.github.io/rust-url/
